--- a/src/components/BuildControls/BuildControl/BuildControl.css
+++ b/src/components/BuildControls/BuildControl/BuildControl.css
@@ -14,6 +14,7 @@
     border: 1px solid #aa6817;
     cursor: pointer;
     outline: none;
+    border-radius: 8px;
 }
 
 .BuildControl button:disabled {
