--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -15,6 +15,6 @@
 @media (min-width : 600px) {
     .Modal {
         width: 500px;
-        left: calc(50%, -250px);
+        left: calc(50% - 250px);
     }
 }
