--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -1,7 +1,7 @@
 .Modal {
     position: fixed;
     z-index: 500;
-    background-color: white;
+    background-color: wheat;
     width: 70%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
