change in toolbar & Layout

--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -4,7 +4,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    background-color:#703B09;
+    background-color:#CF6F2D;       
     display: flex;
     justify-content: space-between;
     align-items: center;
