--- a/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.css
@@ -7,7 +7,7 @@
 }
 
 .NavigationItem a {
-    color: white;
+    color:whitesmoke;
     text-decoration: none;
     height: 100%;
     padding: 16px 10px;
